--- a/pom.xml
+++ b/pom.xml
@@ -2,24 +2,38 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.lineate</groupId>
-    <artifactId>xonix-mind-bot</artifactId>
+    <groupId>abc</groupId>
+    <artifactId>random-bot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>xonix-mind-bot</name>
+    <name>random-bot</name>
     <url>http://maven.apache.org</url>
 
     <repositories>
         <repository>
             <id>xonix-mvn-repo</id>
-            <url>https://raw.github.com/lineate/xonix-bot/mvn-repo/</url>
+            <url>https://raw.github.com/lineate/xonix-repo/</url>
             <snapshots>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
             </snapshots>
         </repository>
     </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.lineate</groupId>
+            <artifactId>xonix-mind-commons</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -45,7 +59,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Start-Class>com.lineate.xonix.mind.RandomBot</Start-Class>
+                                        <Start-Class>abc.RandomBot</Start-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
@@ -64,17 +78,4 @@
             </plugin>
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>com.lineate</groupId>
-            <artifactId>xonix-mind-commons</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 </project>
